Fix footer : Aligned it on bottom, cut Head text on top, fixed link to welcome_user

--- a/app/assets/stylesheets/layouts/_footer.scss
+++ b/app/assets/stylesheets/layouts/_footer.scss
@@ -1,3 +1,12 @@
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
 footer {
   --f-shadow-color: 39deg 40% 56%;
   --f-shadow-low:
